# base-fastapi

./: .pre-commit-config.yaml  README.md
.github/workflows/: pipeline.yaml
backend/: Dockerfile  compose.yaml  entrypoint.sh  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: user.py
backend/app/api/routes/: auth.py  experiences.py  profile.py  projects.py  users.py
backend/app/core/: security.py  settings.py
backend/app/core/security/: dependencies.py  password_utils.py  token_utils.py
backend/app/db/: db.py
backend/app/models/: blacklisted_token.py  experience.py  project.py  user.py
backend/app/repositories/: blacklist_repository.py  user_repository.py
backend/app/schemas/: experience_schema.py  profile_schema.py  project_schema.py  token_schema.py  user_schema.py
backend/app/tests/: conftest.py
backend/app/tests/auth/: test_auth.py
backend/app/tests/experiences/: test_experience.py
backend/app/tests/factories/: experience_factory.py  user_factory.py
backend/app/tests/profile/: test_profile.py
backend/app/tests/projects/: project_factory.py  test_project.py
backend/app/tests/users/: test_user.py  user_factory.py
backend/github/workflows/: pipeline.yaml
backend/migrations/: env.py
backend/migrations/versions/: ddf278e4c2f2_create_users_table.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: Header.tsx
frontend/src/app/experience/: ExperienceModal.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: CreateExperienceModal.tsx  ExperienceModal.tsx  page.tsx
frontend/src/app/profile/[slug]/: page.tsx
frontend/src/app/project/: ProjectModal.tsx  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: index.tsx
